currency bug fix

--- a/src/app/features/dashboard/bom/bom-allMaterial/bom-allMaterial.component.html
+++ b/src/app/features/dashboard/bom/bom-allMaterial/bom-allMaterial.component.html
@@ -23,7 +23,7 @@
                 </div>
                 <div class="col-xs-2 color-white">
                   <span class="pull-right">
-                    Estimated Rate(₹)
+                    Estimated Rate
                   </span>
                 </div>
               </mat-expansion-panel-header>
