--- a/src/app/features/dashboard/bom/bom-topMaterial/bom-topMaterial.component.html
+++ b/src/app/features/dashboard/bom/bom-topMaterial/bom-topMaterial.component.html
@@ -23,7 +23,7 @@
                 </div>
                 <div class="col-xs-2">
                   <span class="pull-right color-white">
-                    Estimated Rate(₹)
+                    Estimated Rate
                   </span>
                 </div>
               </mat-expansion-panel-header>
