--- a/src/app/shared/dialogs/add-bom-warning/add-bom-warning.component.html
+++ b/src/app/shared/dialogs/add-bom-warning/add-bom-warning.component.html
@@ -10,6 +10,6 @@
 <br />
 <div class="col-xs-12 text-center">
   <button (click)="close()" mat-raised-button class="main-background-color main-button color-white">
-    Add BOM
+    Add To BOM
   </button>
 </div>
