--- a/src/app/features/po/initiate-po/po-project-material/po-project-material.component.html
+++ b/src/app/features/po/initiate-po/po-project-material/po-project-material.component.html
@@ -88,7 +88,7 @@
         <ng-container matColumnDef="Required Date">
           <th mat-header-cell *matHeaderCellDef>Required Date</th>
           <td mat-cell *matCellDef="let element; let i = index">
-            {{ element.dueDate | date: "dd-MMM-yyy" }}
+            {{ element.dueDate ? (element.dueDate | date: "dd-MMM-yyy") : "" }}
           </td>
         </ng-container>
         <!-- Name Column -->
